@@ -47,7 +47,7 @@ W&auml;hlen Sie hierzu die Einstellung f&uuml;r Ihr Land und nicht &quot;UTC+X S
 <p>Die gesamte Formatierung der einzelnen Termine wird&uuml;ber Templates und Formatierungsbausteine gesteuert. 
 Beachten Sie: Manche dieser Formatierungen sind in der Gruppe erweiterte Optionen verborgen.
 Es gibt ein Template f&uuml;r den gesamten Eintrag und ein spezielles Template f&uuml;r das Datum.
-Im Datums-Template k&ouml;nnen die folgenden Platzhalter verwendet werden: {START_DATE} {END_DATE} {START_TIME} {END_TIME} and {DATE_SEPARATOR}. 
+Im Datums-Template k&ouml;nnen die folgenden Platzhalter verwendet werden: {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME} und {DATE_SEPARATOR}. 
 Das Datumsformat und das Zeiformat kann im Backend eingestellt werden. Diese Formatierungen werden angewendet, um die Platzhalter mit den konkreten Daten des jeweiligen Eintrags auszuf&uuml;llen. 
 Dar&uuml;ber hinaus gibt es einen Trenner, den Sie zwischen Start- und Enddatum des Termins einf&uuml;gen k&ouml;nnen. Abh&auml;ngig von der Art des Termins wird das Datum auch auf verschiedene Weise angezeigt. Bei ganzt&auml;gigen Terminen wird die Anzeige der Uhrzeit f&uuml;r Start und Ende unterdr&uuml;ckt.
 Das Modul versucht au&szlig;erdem den Datumsstring zu optimieren. Wenn Start- und Enddatum am gleichen Tag sind, wird das Enddatum gar nicht erst angezeigt. Diese Funktionalit&auml;t kann jedoch abgeschaltet werden, indem Sie die entsprechende Checkbox deselektieren. Mit einer weiteren Checkbox k&ouml;nnen Sie festlegen, ob vom Enddatum eines Termins eine Sekunde abgezogen werden soll, falls dieses auf Mitternacht f&auml;llt. Dadurch z&auml;hlt das Ende des Termins noch zum letzten (echten) Veranstaltungstag. Zum Schluss wird der gesamte String durch die Formatierungsbausteine f&uuml;r den Start und das Ende des Datums eingeschlossen. Auf diese Weise entsteht der Inhalt f&uuml;r den {DATE} Platzhalter.</p>
@@ -92,7 +92,7 @@ $LANG['backend'] = array(
         'TXT_EXTCAL_DESCRIPTION_END'             => "Formatierung um die ausf&uuml;hrliche Beschreibung abzuschlie&szlig;en (wird an {DESCRIPTION} angeh&auml;ngt)",
         'TXT_EXTCAL_HELP_PAGE'                        => "Hilfe-Seite",
         'TXT_EXTCAL_CACHE_EMPTY'                => "Cache geleert",                
-        'TXT_EXTCAL_ENTRY_TEMPLATE'                => "im folgenden Template k&ouml;nnen Sie das Erscheinungsbild  eines Kalendereintrags festlegen. M&ouml;gliche Platzhalter sind {DATE} {TITLE} {LOCATION} und {DESCRIPTION}. Anstelle des Datums k&ouml;nnen Sie hier auch  {START_DATE} {END_DATE} {START_TIME} {END_TIME} und {DATE_SEPARATOR} verwenden. 
+        'TXT_EXTCAL_ENTRY_TEMPLATE'                => "im folgenden Template k&ouml;nnen Sie das Erscheinungsbild  eines Kalendereintrags festlegen. M&ouml;gliche Platzhalter sind {DATE}, {TITLE}, {LOCATION} und {DESCRIPTION}. Anstelle des Datums k&ouml;nnen Sie hier auch  {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME} und {DATE_SEPARATOR} verwenden. 
         Die oben definierten Formatierungsbausteine zum Einleiten und Abschlie&szlig;en der jeweiligen Platzhalter werden um diese herum eingef&uuml;gt falls der jeweilige String im aktuellen Kalendereintrag nicht leer ist.",
         'TXT_EXTCAL_DESCRIPTION_START'             => "Formatierung um die ausf&uuml;hrliche Beschreibung einzuleiten (wird {DESCRIPTION} vorangestellt)",
         'TXT_EXTCAL_LOCATION_START'                => "Formatierung um den Ort einzuleiten (wird {LOCATION} vorangestellt)",
@@ -101,7 +101,7 @@ $LANG['backend'] = array(
         'TXT_EXTCAL_TITLE_END'                        => "Formatierung um den Titel abzuschlie&szlig;en (wird an  {TITLE} angeh&auml;ngt)",
         'TXT_EXTCAL_DATE_START'                        => "Formatierung um das Datum einzuleiten (wird  {DATE} vorangestellt)",
         'TXT_EXTCAL_CONFIDENTIAL_TEXT'                 => "Text der anstelle des Titels bei vertraulichen Terminen angezeigt wird (inclusive den einleitenden und abschlie&szlig;enden Tags falls Sie diesen Text davon eingeschlossen haben m&ouml;chten)",
-        'TXT_EXTCAL_DATE_TEMPLATE'                 => "Mit dem folgenden Template k&ouml;nnen Sie das Erscheinungsbild des Datums fein-justieren. M&ouml;gliche Platzhalter sind {START_DATE} {END_DATE} {START_TIME} {END_TIME} und {DATE_SEPARATOR}. Letzteres und der einleitende und der abschlie&szlig;ende Formatierungsblock, die das Ergebnis nach Anwendung dieses Templates einschlie&szlig;en, werden weiter oben definiert.",
+        'TXT_EXTCAL_DATE_TEMPLATE'                 => "Mit dem folgenden Template k&ouml;nnen Sie das Erscheinungsbild des Datums fein-justieren. M&ouml;gliche Platzhalter sind {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME} und {DATE_SEPARATOR}. Letzteres und der einleitende und der abschlie&szlig;ende Formatierungsblock, die das Ergebnis nach Anwendung dieses Templates einschlie&szlig;en, werden weiter oben definiert.",
         'TXT_EXTCAL_OPTIMIZE_DATE'                => "versuche die Ausgabe des Datums zu optimieren (z.B. das Enddatum weglassen, wenn es am gleichen Tag wie der Anfang des Termins ist)",
         'TXT_EXTCAL_MIDNIGHT_FIX'                => "quetsche Termine, die um Mitternacht enden noch in den Vortag",
         'TXT_EXTCAL_VERIFY_PEER'                => "&Uuml;berpr&uuml;fe ssl-Zertifikate f&uuml;r https-Verbindungen (Sicherheitsrisiko wenn deaktiviert)",
