@@ -42,7 +42,7 @@ Using an https-connection is recommended. In the advanced options you can disabl
 <p>The timezone based on which the dates in the calenders are interpreted, can be configured in the backend, too. This is especially important for a correct handling of appointments across daylight-savings. Choose the correct timezone for your country. Do not use something like &quot;UTC+X hours&quot;, because this setting would not be aware of any daylight savings. You can also leave the field empty, then the module tries to determine the time zone from the language global settings of WebsiteBaker (this should work for Germany, England, France and Italy, currently). To reset any of the fields, just enter &quot;{DEFAULT}&quot; and save the settings.</p>
 
 <p>The whole formatting of the appointments is controlled by templates and formatting blocks. Note that some of these settings are hidden in the advanced settings.
-There is a template for the whole entry and a special one for the date. In the date template, several place holders can be used:  {START_DATE} {END_DATE} {START_TIME} {END_TIME} and {DATE_SEPARATOR}. The date format and the time format can be adjusted in the backend. These formats are used to fill the place holders from the data of each appointment. Also, there is a separator, which can be inserted between start and end date. Depending on the type of the entry, the date is displayed in different manners. For allday-entries the start and end time is not displayed at all. The module also tries to optimize the date string. If the start date and the end date are the same, the end date is ommitted. However, if you want to disable this feature, you can do so by unchecking that checkbox. Another checkbox allows you to configure, if the module should subtract one second from end dates at midnight, so that the end of the appointment still belongs to the last (real) day. Finally, the whole string is surrounded by a starting and an end formatting block. That's how the {DATE} block is generated.</p>
+There is a template for the whole entry and a special one for the date. In the date template, several place holders can be used:  {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME}, and {DATE_SEPARATOR}. The date format and the time format can be adjusted in the backend. These formats are used to fill the place holders from the data of each appointment. Also, there is a separator, which can be inserted between start and end date. Depending on the type of the entry, the date is displayed in different manners. For allday-entries the start and end time is not displayed at all. The module also tries to optimize the date string. If the start date and the end date are the same, the end date is ommitted. However, if you want to disable this feature, you can do so by unchecking that checkbox. Another checkbox allows you to configure, if the module should subtract one second from end dates at midnight, so that the end of the appointment still belongs to the last (real) day. Finally, the whole string is surrounded by a starting and an end formatting block. That's how the {DATE} block is generated.</p>
 
 <p> The other place holders are more simple. They basically consist of a value which comes out of the appointment and a prefix and a suffix formatting block. This applies for the title of the entry ({TITLE}), the location ({LOCATION}), and the detailled description ({DESCRIPTION}).
 If one of the fields is empty, also the prefix and suffix formatting block are suppressed. If you want to avoid this, just enter a space character in the title, the location or the description, respectively.
@@ -82,7 +82,7 @@ $LANG['backend'] = array(
         'TXT_EXTCAL_DESCRIPTION_END'             => "formatting of the end of the detailed description (appended to {DESCRIPTION})",
         'TXT_EXTCAL_HELP_PAGE'                        => "Help page",
         'TXT_EXTCAL_CACHE_EMPTY'                => "Cache empty",        
-        'TXT_EXTCAL_ENTRY_TEMPLATE'                => "in the following template you can set up the appearance of each calendar entry. Possible place holders are {DATE} {TITLE} {LOCATION} and {DESCRIPTION}. Instead of the date you can also use {START_DATE} {END_DATE} {START_TIME} {END_TIME} and {DATE_SEPARATOR} here. The opening and closing blocks defined above are inserted around each of these placeholders provided that this string is not empty for the current entry.",
+        'TXT_EXTCAL_ENTRY_TEMPLATE'                => "in the following template you can set up the appearance of each calendar entry. Possible place holders are {DATE}, {TITLE}, {LOCATION}, and {DESCRIPTION}. Instead of the date you can also use {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME}, and {DATE_SEPARATOR} here. The opening and closing blocks defined above are inserted around each of these placeholders provided that this string is not empty for the current entry.",
 
         'TXT_EXTCAL_DESCRIPTION_START'             => "formatting of the beginning of the description (prepended to {DESCRIPTION})",
         'TXT_EXTCAL_LOCATION_START'                => "formatting at the beginning of a location (prepended to {LOCATION})",
@@ -91,7 +91,7 @@ $LANG['backend'] = array(
         'TXT_EXTCAL_TITLE_END'                        => "formatting at the end of a title (appended to {TITLE})",
         'TXT_EXTCAL_DATE_START'                        => "formatting at the beginning of the date (prepended to {DATE})",
         'TXT_EXTCAL_CONFIDENTIAL_TEXT'                 => "text displayed as description for confidential entries (including the opening and closing tags if you would like to have those around that text)",
-        'TXT_EXTCAL_DATE_TEMPLATE'                 => "in the following template you can fine-tune the appearance of the date. Possible place holders are {START_DATE} {END_DATE} {START_TIME} {END_TIME} and {DATE_SEPARATOR}.  The latter and the opening and closing blocks, are wrapped around the result of this template, are defined above.",
+        'TXT_EXTCAL_DATE_TEMPLATE'                 => "in the following template you can fine-tune the appearance of the date. Possible place holders are {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME}, and {DATE_SEPARATOR}.  The latter and the opening and closing blocks, are wrapped around the result of this template, are defined above.",
         'TXT_EXTCAL_OPTIMIZE_DATE'                => "try to optimize the date output (e.g. drop end date if it is on the same day)",
         'TXT_EXTCAL_MIDNIGHT_FIX'                => "squeeze appointments ending at midnight into the day before",
         'TXT_EXTCAL_VERIFY_PEER'                => "verify ssl-certificates for https-connections (security risk if unchecked)",
