@@ -86,7 +86,7 @@ $LANG ['backend'] = array(
         'TXT_EXTCAL_DESCRIPTION_END'            => "mise en forme a la fin de la description d&eacut;taill&eacut;e (annex&eacut; &agrave; {DESCRIPTION})",
         'TXT_EXTCAL_HELP_PAGE'                        => "Page d'aide",
         'TXT_EXTCAL_CACHE_EMPTY'                => "Cache effac&eacut;",
-        'TXT_EXTCAL_ENTRY_TEMPLATE'                 => "dans le mod&egrave;le suivant, vous pouvez configurer l'apparence de chaque entr&eacut;e de calendrier endroit possible titulaires sont {DATE} {TITLE} {LOCATION} et {DESCRIPTION}. Au lieu de la date vous pouvez &eacut;galement utilizer {START_DATE} {END_DATE} {START_TIME} {END_TIME} et {DATE_SEPARATOR} ici. L'ouverture et bloque la fermeture d&eacut;finis ci-dessus sont ins&eacut;r&eacut;s autour de chacun de ces espaces r&eacut;serv&eacut;s &agrave; condition que cette cha&icirc;ne ne est pas vide pour l'entr&eacut;e courante. ",
+        'TXT_EXTCAL_ENTRY_TEMPLATE'                 => "dans le mod&egrave;le suivant, vous pouvez configurer l'apparence de chaque entr&eacut;e de calendrier endroit possible titulaires sont {DATE}, {TITLE}, {LOCATION} et {DESCRIPTION}. Au lieu de la date vous pouvez &eacut;galement utilizer {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME} et {DATE_SEPARATOR} ici. L'ouverture et bloque la fermeture d&eacut;finis ci-dessus sont ins&eacut;r&eacut;s autour de chacun de ces espaces r&eacut;serv&eacut;s &agrave; condition que cette cha&icirc;ne ne est pas vide pour l'entr&eacut;e courante. ",
         'TXT_EXTCAL_DESCRIPTION_START'                 => "mise en forme du d&eacut;but de la description (pr&eacut;fix&eacut; &agrave; {DESCRIPTION })",
         'TXT_EXTCAL_LOCATION_START'                 => "mise en forme au d&eacut;but d'un lieu (pr&eacut;fix&eacut; &agrave; {LOCATION})",
         'TXT_EXTCAL_LOCATION_END'                 => "formatage &agrave; la fin d'un lieu (annex&eacut; &agrave; {LOCATION})",
