@@ -117,7 +117,7 @@ $LANG ['backend'] = array(
         'TXT_EXTCAL_DESCRIPTION_END'    => "formattazione a la fine della descrizione dettagliata (allegata a {LOCATION})",
         'TXT_EXTCAL_HELP_PAGE'                => "Pagina di aiuto",
         'TXT_EXTCAL_CACHE_EMPTY'         => "Cache vuoto",
-        'TXT_EXTCAL_ENTRY_TEMPLATE'         => "nel modello seguente &egrave; possibile impostare l'aspetto di ogni voce del calendario possibile segnaposto sono {DATE}, {TITLE}, {LOCATION} e {DESCRIZIONE}. Invece de la data &egrave; anche possibile utilizzare  {START_DATE} {END_DATE} {START_TIME} {END_TIME} e {DATE_SEPARATOR} qui. L'apertura e blocca chiusura sopra definiti sono inseriti attorno a ciascuno di questi segnaposto a condizione che questa stringa non &egrave; vuota per la voce corrente. ",
+        'TXT_EXTCAL_ENTRY_TEMPLATE'         => "nel modello seguente &egrave; possibile impostare l'aspetto di ogni voce del calendario possibile segnaposto sono {DATE}, {TITLE}, {LOCATION} e {DESCRIPTION}. Invece de la data &egrave; anche possibile utilizzare  {START_DATE}, {END_DATE}, {START_TIME}, {END_TIME} e {DATE_SEPARATOR} qui. L'apertura e blocca chiusura sopra definiti sono inseriti attorno a ciascuno di questi segnaposto a condizione che questa stringa non &egrave; vuota per la voce corrente. ",
         'TXT_EXTCAL_DESCRIPTION_START'         => "formattazione di inizio della descrizione (anteporre a {DESCRIPTION})",
         'TXT_EXTCAL_LOCATION_START'         => "formattazione all'inizio di un percorso (anteposta a {LOCATION})",
         'TXT_EXTCAL_LOCATION_END'         => "formattazione alla fine di un percorso (allegato a {DESCRIPTION})",
